<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    style="@style/Widget.AppCompat.ActionButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iltakommentti_background"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/prev_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="118dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#F44336"
        android:text="@string/prev_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="118dp"
        android:layout_height="62dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#F44336"
        android:text="@string/next_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/generate_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="127dp"
        android:layout_height="59dp"
        android:backgroundTint="#F44336"
        android:text="@string/generate_btn"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_textfield"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/save_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="1dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#F44336"
        android:foreground="@drawable/icon_add"
        android:text="@string/generate_btn"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/generate_btn"
        app:layout_constraintTop_toBottomOf="@+id/comment_textfield"
        app:layout_constraintVertical_bias="0.208" />

    <Button
        android:id="@+id/share_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="58dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#F44336"
        android:foreground="@drawable/icon_share"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/newsArticleView"
        app:layout_constraintEnd_toStartOf="@+id/next_btn"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/prev_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />

    <Button
        android:id="@+id/clear_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="22dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#F44336"
        android:foreground="@drawable/icon_delete"
        android:text="@string/generate_btn"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/generate_btn"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_textfield"
        app:layout_constraintVertical_bias="0.217" />

    <ImageView
        android:id="@+id/newsArticleView"
        android:layout_width="0dp"
        android:layout_height="309dp"
        android:contentDescription="@string/article_imageview"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <EditText
        android:id="@+id/comment_textfield"
        android:layout_width="372dp"
        android:layout_height="120dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:enabled="true"
        android:gravity="start|top"
        android:hint="@string/comment_hint"
        android:inputType="textMultiLine|textNoSuggestions"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsArticleView" />

    <EditText
        android:id="@+id/userID_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/default_user"
        android:inputType="textPersonName|textNoSuggestions"
        android:text="@string/default_user"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/comment_textfield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsArticleView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>